--- a/02-feb-21/22-02/index.html
+++ b/02-feb-21/22-02/index.html
@@ -5,10 +5,83 @@
     <!-- <meta http-equiv="X-UA-Compatible" content="IE-edge" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HTML basics</title>
+    <link rel="stylesheet" href="index.css" />
   </head>
   <body>
     <h1>HTML</h1>
     <h2>a creative process</h2>
-    <p>! + enter >>> autocomplete the html head</p>
+    <p id="top">! + enter >>> autocomplete the html head</p>
+
+    <div>
+      <article>
+        <h2>Article 1</h2>
+
+        <p>
+          Lorem ipsum dolor sit <b>amet consectetur adipisicing elit.</b> Quo
+          quas, facilis libero fugit <em>nemo minus</em> officia reprehenderit
+          incidunt vel asperiores autem corporis quidem eius tenetur accusamus
+          dolore, <i>quam aliquid quos?</i>
+        </p>
+        <img
+          src="https://picsum.photos/500/300"
+          alt="random pic – will change"
+        />
+        <p>
+          <small>Lorem ipsum dolor,</small> sit <sup>amet</sup>
+          <sub>consectetur</sub> adipisicing elit. Officia cumque magni culpa,
+          et vero id repudiandae atque quae beatae, error magnam optio
+          perferendis eaque, qui maxime rem consectetur! Voluptatum quia ipsam
+          tempore tenetur <strong>minima</strong> molestiae tempora sunt sit
+          nesciunt recusandae aliquam, accusantium voluptate cumque assumenda
+          laborum dolorum id excepturi vitae quae iusto explicabo labore
+          obcaecati laudantium. Culpa quas aspernatur, corrupti fugit corporis
+          maxime quasi, exercitationem nisi iusto voluptates dolorem alias?
+          Impedit, quam laborum neque fugit, dolore voluptates in ullam
+          laboriosam aperiam cupiditate illum quasi? Possimus necessitatibus ex
+          nostrum tempora cupiditate, consequuntur velit deserunt enim,
+          doloribus quisquam delectus. Ipsam et maxime doloribus voluptatibus
+          fugit dolores dicta commodi nulla similique tenetur. Vitae facere
+          necessitatibus ut, aliquid architecto accusantium corporis obcaecati
+          sed provident.
+        </p>
+      </article>
+      <article>
+        <h2>Article 2</h2>
+
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo quas,
+          facilis libero fugit nemo minus officia reprehenderit incidunt vel
+          asperiores autem corporis quidem eius tenetur accusamus dolore, quam
+          aliquid quos?
+        </p>
+        <img
+          src="https://picsum.photos/500/300"
+          alt="random pic – will change"
+        />
+
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officia
+          cumque magni culpa, et vero id repudiandae atque quae beatae, error
+          magnam optio perferendis eaque, qui maxime rem consectetur! Voluptatum
+          quia ipsam tempore tenetur minima molestiae tempora sunt sit nesciunt
+          recusandae aliquam, accusantium voluptate cumque assumenda laborum
+          dolorum id excepturi vitae quae iusto explicabo labore obcaecati
+          laudantium. Culpa quas aspernatur, corrupti fugit corporis maxime
+          quasi, exercitationem nisi iusto voluptates dolorem alias? Impedit,
+          quam laborum neque fugit, dolore voluptates in ullam laboriosam
+          aperiam cupiditate illum quasi? Possimus necessitatibus ex nostrum
+          tempora cupiditate, consequuntur velit deserunt enim, doloribus
+          quisquam delectus. Ipsam et maxime doloribus voluptatibus fugit
+          dolores dicta commodi nulla similique tenetur. Vitae facere
+          necessitatibus ut, aliquid architecto accusantium corporis obcaecati
+          sed provident.
+        </p>
+      </article>
+    </div>
+    <a href="#top">Back up</a>
   </body>
 </html>
+<!--        local server    free port     root          -->
+<!-- http://   127.0.0.1    :5500     /02-feb-21/22-02/index.html -->
+
+<!-- 3000 backend 5000 frontend-->
