--- a/02-feb-21/22-02/index.html
+++ b/02-feb-21/22-02/index.html
@@ -8,76 +8,125 @@
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
+    <nav>
+      <ul>
+        <li><a href="test">This</a></li>
+        <li><a href="test">is</a></li>
+        <li><a href="test">going</a></li>
+        <li><a href="test">nowhere</a></li>
+      </ul>
+    </nav>
     <h1>HTML</h1>
     <h2>a creative process</h2>
     <p id="top">! + enter >>> autocomplete the html head</p>
 
     <div>
-      <article>
-        <h2>Article 1</h2>
+      <div>
+        <article>
+          <h2>Article 1</h2>
 
-        <p>
-          Lorem ipsum dolor sit <b>amet consectetur adipisicing elit.</b> Quo
-          quas, facilis libero fugit <em>nemo minus</em> officia reprehenderit
-          incidunt vel asperiores autem corporis quidem eius tenetur accusamus
-          dolore, <i>quam aliquid quos?</i>
-        </p>
-        <img
-          src="https://picsum.photos/500/300"
-          alt="random pic – will change"
-        />
-        <p>
-          <small>Lorem ipsum dolor,</small> sit <sup>amet</sup>
-          <sub>consectetur</sub> adipisicing elit. Officia cumque magni culpa,
-          et vero id repudiandae atque quae beatae, error magnam optio
-          perferendis eaque, qui maxime rem consectetur! Voluptatum quia ipsam
-          tempore tenetur <strong>minima</strong> molestiae tempora sunt sit
-          nesciunt recusandae aliquam, accusantium voluptate cumque assumenda
-          laborum dolorum id excepturi vitae quae iusto explicabo labore
-          obcaecati laudantium. Culpa quas aspernatur, corrupti fugit corporis
-          maxime quasi, exercitationem nisi iusto voluptates dolorem alias?
-          Impedit, quam laborum neque fugit, dolore voluptates in ullam
-          laboriosam aperiam cupiditate illum quasi? Possimus necessitatibus ex
-          nostrum tempora cupiditate, consequuntur velit deserunt enim,
-          doloribus quisquam delectus. Ipsam et maxime doloribus voluptatibus
-          fugit dolores dicta commodi nulla similique tenetur. Vitae facere
-          necessitatibus ut, aliquid architecto accusantium corporis obcaecati
-          sed provident.
-        </p>
-      </article>
-      <article>
-        <h2>Article 2</h2>
+          <p>
+            Lorem ipsum dolor sit <b>amet consectetur adipisicing elit.</b> Quo
+            quas, facilis libero fugit <em>nemo minus</em> officia reprehenderit
+            incidunt vel asperiores autem corporis quidem eius tenetur accusamus
+            dolore, <i>quam aliquid quos?</i>
+          </p>
+          <img
+            src="https://picsum.photos/id/1028/500/300"
+            alt="random pic – will change"
+          />
+          <p>
+            <small>Lorem ipsum dolor,</small> sit <sup>amet</sup>
+            <sub>consectetur</sub> adipisicing elit. Officia cumque magni culpa,
+            et vero id repudiandae atque quae beatae, error magnam optio
+            perferendis eaque, qui maxime rem consectetur! Voluptatum quia ipsam
+            tempore tenetur <strong>minima</strong> molestiae tempora sunt sit
+            nesciunt recusandae aliquam, accusantium voluptate cumque assumenda
+            laborum dolorum id excepturi vitae quae iusto explicabo labore
+            obcaecati laudantium. Culpa quas aspernatur, corrupti fugit corporis
+            maxime quasi, exercitationem nisi iusto voluptates dolorem alias?
+            Impedit, quam laborum neque fugit, dolore voluptates in ullam
+            laboriosam aperiam cupiditate illum quasi? Possimus necessitatibus
+            ex nostrum tempora cupiditate, consequuntur velit deserunt enim,
+            doloribus quisquam delectus. Ipsam et maxime doloribus voluptatibus
+            fugit dolores dicta commodi nulla similique tenetur. Vitae facere
+            necessitatibus ut, aliquid architecto accusantium corporis obcaecati
+            sed provident.
+          </p>
+        </article>
+      </div>
+      <div>
+        <article>
+          <h2>Article 2</h2>
 
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo quas,
-          facilis libero fugit nemo minus officia reprehenderit incidunt vel
-          asperiores autem corporis quidem eius tenetur accusamus dolore, quam
-          aliquid quos?
-        </p>
-        <img
-          src="https://picsum.photos/500/300"
-          alt="random pic – will change"
-        />
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo quas,
+            facilis libero fugit nemo minus officia reprehenderit incidunt vel
+            asperiores autem corporis quidem eius tenetur accusamus dolore, quam
+            aliquid quos?
+          </p>
+          <img
+            src="https://picsum.photos/id/1021/500/300"
+            alt="random pic – will change"
+          />
 
-        <p>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officia
-          cumque magni culpa, et vero id repudiandae atque quae beatae, error
-          magnam optio perferendis eaque, qui maxime rem consectetur! Voluptatum
-          quia ipsam tempore tenetur minima molestiae tempora sunt sit nesciunt
-          recusandae aliquam, accusantium voluptate cumque assumenda laborum
-          dolorum id excepturi vitae quae iusto explicabo labore obcaecati
-          laudantium. Culpa quas aspernatur, corrupti fugit corporis maxime
-          quasi, exercitationem nisi iusto voluptates dolorem alias? Impedit,
-          quam laborum neque fugit, dolore voluptates in ullam laboriosam
-          aperiam cupiditate illum quasi? Possimus necessitatibus ex nostrum
-          tempora cupiditate, consequuntur velit deserunt enim, doloribus
-          quisquam delectus. Ipsam et maxime doloribus voluptatibus fugit
-          dolores dicta commodi nulla similique tenetur. Vitae facere
-          necessitatibus ut, aliquid architecto accusantium corporis obcaecati
-          sed provident.
-        </p>
-      </article>
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officia
+            cumque magni culpa, et vero id repudiandae atque quae beatae, error
+            magnam optio perferendis eaque, qui maxime rem consectetur!
+            Voluptatum quia ipsam tempore tenetur minima molestiae tempora sunt
+            sit nesciunt recusandae aliquam, accusantium voluptate cumque
+            assumenda laborum dolorum id excepturi vitae quae iusto explicabo
+            labore obcaecati laudantium. Culpa quas aspernatur, corrupti fugit
+            corporis maxime quasi, exercitationem nisi iusto voluptates dolorem
+            alias? Impedit, quam laborum neque fugit, dolore voluptates in ullam
+            laboriosam aperiam cupiditate illum quasi? Possimus necessitatibus
+            ex nostrum tempora cupiditate, consequuntur velit deserunt enim,
+            doloribus quisquam delectus. Ipsam et maxime doloribus voluptatibus
+            fugit dolores dicta commodi nulla similique tenetur. Vitae facere
+            necessitatibus ut, aliquid architecto accusantium corporis obcaecati
+            sed provident.
+          </p>
+        </article>
+      </div>
     </div>
+    <iframe
+      width="800"
+      height="500"
+      src="https://www.youtube.com/embed/h1VgSIW2VII"
+      frameborder="0"
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+      allowfullscreen
+    ></iframe>
+    <iframe
+      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d85756.77605530716!2d12.98639035895716!3d47.80278869784851!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47769adda908d4b1%3A0xc1e183a1412af73d!2sSalzburg%2C%20%C3%96sterreich!5e0!3m2!1sde!2sde!4v1614001449912!5m2!1sde!2sde"
+      width="800"
+      height="500"
+      style="border: 0"
+      allowfullscreen=""
+      loading="lazy"
+    ></iframe>
+    <div id="form">
+      <form action="action_page.php">
+        <label for="fn">First name:</label> <br />
+        <input
+          type="text"
+          name="firstname"
+          id="fn"
+          placeholder="Tell me your name!"
+        />
+        <br />
+        <label for="ln">Last name:</label> <br />
+        <input type="text" name="lastname" id="ln" /> <br />
+        <input type="radio" name="gender" value="male" id="male" checked />
+        <label for="male">Male</label> <br />
+        <input type="radio" name="gender" value="female" id="female" />
+        <label for="female">Female</label> <br />
+        <input type="submit" value="Submit" />
+      </form>
+    </div>
+    <input type="checkbox" name="test" id="test" value="test" />
+    <input type="button" name="test" id="test" value="😠" />
     <a href="#top">Back up</a>
   </body>
 </html>
