--- a/02-feb-21/22-02/index.html
+++ b/02-feb-21/22-02/index.html
@@ -128,6 +128,29 @@
     <input type="checkbox" name="test" id="test" value="test" />
     <input type="button" name="test" id="test" value="😠" />
     <a href="#top">Back up</a>
+
+    <table>
+      <tr>
+        <th>Name</th>
+        <th>Sorte</th>
+        <th>Standort</th>
+        <th>Keimung</th>
+        <th>Vorkultur</th>
+        <th>Auspflanzen</th>
+        <th>Direktsaat</th>
+        <th>Ernte</th>
+      </tr>
+      <th>Chili</th>
+      <th>Chili de Cayenne</th>
+      <th>sonnig, windgeschützt</th>
+      <th>nach 15-30 Tage</th>
+      <th>Feb-März</th>
+      <th>nach Eisheiligen</th>
+      <th>---</th>
+     <th>Aug-Sep</th>
+     
+      </tr>
+    </table>
   </body>
 </html>
 <!--        local server    free port     root          -->
