--- a/02-feb-21/23-02/index.html
+++ b/02-feb-21/23-02/index.html
@@ -3,8 +3,118 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css" />
+    <title>Start</title>
+    <link rel="stylesheet" href="./style.css" />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <p>Stuff about this site</p>
+      <nav>
+        <ul>
+          <li><a href="./index.html">start</a></li>
+          <li><a href="./galery.html">gallery</a></li>
+          <li><a href="./contact.html">contact</a></li>
+        </ul>
+      </nav>
+    </header>
+    <h1>This is a headline</h1>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe labore
+      illo a soluta repudiandae iste inventore, ullam, enim veritatis pariatur
+      error voluptates velit corporis debitis consequuntur iusto accusamus et
+      aut sunt nostrum. Molestias quis tenetur dolorem quo odio perferendis modi
+      voluptas ad nesciunt doloribus culpa ut sapiente delectus deleniti commodi
+      magni, magnam non? Blanditiis nostrum, perferendis nihil fuga quasi
+      obcaecati ut commodi! Distinctio aliquid temporibus itaque laboriosam
+      animi mollitia autem ea, dolore quaerat quibusdam quae exercitationem
+      magnam amet veritatis sed. At sed itaque optio ex.
+    </p>
+    <div>
+      <div class="article">
+        <article>
+          <h2>Article ONE</h2>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+            Repudiandae quis provident corrupti hic sapiente necessitatibus
+            cupiditate incidunt possimus dicta tempora et, ut veniam excepturi
+            quaerat?
+          </p>
+          <img src="https://picsum.photos/300?grayscale" alt="random pic" />
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Provident
+            vitae vel nam! Tempora nisi eaque modi placeat consectetur, quis
+            officiis! Debitis, minima voluptatibus non, voluptatum eum porro
+            vero quasi deleniti eveniet voluptatem ipsa et adipisci consequuntur
+            amet quas pariatur officiis rerum atque dolorum ut voluptates
+            assumenda, at maiores architecto! In sapiente, ratione accusantium
+            non quibusdam at voluptatibus dicta optio assumenda natus pariatur
+            necessitatibus sequi! Praesentium ea unde amet consectetur ut neque
+            soluta nisi, eveniet minus. Sint atque, praesentium architecto,
+            repellendus impedit iusto tempore distinctio labore totam eaque aut
+            expedita, alias id. Non, corrupti? Esse natus minus quo suscipit
+            necessitatibus quisquam?
+          </p>
+          <button>Read more</button>
+        </article>
+      </div>
+      <div class="article">
+        <article>
+          <h2>Article TWO</h2>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+            Repudiandae quis provident corrupti hic sapiente necessitatibus
+            cupiditate incidunt possimus dicta tempora et, ut veniam excepturi
+            quaerat?
+          </p>
+          <img src="https://picsum.photos/200?grayscale" alt="random pic" />
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Provident
+            vitae vel nam! Tempora nisi eaque modi placeat consectetur, quis
+            officiis! Debitis, minima voluptatibus non, voluptatum eum porro
+            vero quasi deleniti eveniet voluptatem ipsa et adipisci consequuntur
+            amet quas pariatur officiis rerum atque dolorum ut voluptates
+            assumenda, at maiores architecto! In sapiente, ratione accusantium
+            non quibusdam at voluptatibus dicta optio assumenda natus pariatur
+            necessitatibus sequi! Praesentium ea unde amet consectetur ut neque
+            soluta nisi, eveniet minus. Sint atque, praesentium architecto,
+            repellendus impedit iusto tempore distinctio labore totam eaque aut
+            expedita, alias id. Non, corrupti? Esse natus minus quo suscipit
+            necessitatibus quisquam?
+          </p>
+          <button>Read more</button>
+        </article>
+      </div>
+      <div class="article">
+        <article>
+          <h2>Article THREE</h2>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+            Repudiandae quis provident corrupti hic sapiente necessitatibus
+            cupiditate incidunt possimus dicta tempora et, ut veniam excepturi
+            quaerat?
+          </p>
+          <img src="https://picsum.photos/400?grayscale" alt="random pic" />
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Provident
+            vitae vel nam! Tempora nisi eaque modi placeat consectetur, quis
+            officiis! Debitis, minima voluptatibus non, voluptatum eum porro
+            vero quasi deleniti eveniet voluptatem ipsa et adipisci consequuntur
+            amet quas pariatur officiis rerum atque dolorum ut voluptates
+            assumenda, at maiores architecto! In sapiente, ratione accusantium
+            non quibusdam at voluptatibus dicta optio assumenda natus pariatur
+            necessitatibus sequi! Praesentium ea unde amet consectetur ut neque
+            soluta nisi, eveniet minus. Sint atque, praesentium architecto,
+            repellendus impedit iusto tempore distinctio labore totam eaque aut
+            expedita, alias id. Non, corrupti? Esse natus minus quo suscipit
+            necessitatibus quisquam?
+          </p>
+          <a href="./readMore.html" class="button">Read more</a>
+        </article>
+      </div>
+    </div>
+    <footer>
+      <p>❤ Made with Love ❤</p>
+      <a href="contact.html">contact me</a>
+    </footer>
+  </body>
 </html>
