--- a/02-feb-21/23-02/contact.html
+++ b/02-feb-21/23-02/contact.html
@@ -17,6 +17,7 @@
         </ul>
       </nav>
     </header>
+    form coming soon
     <footer>
       <p>❤ Made with Love ❤</p>
       <a href="contact.html">contact me</a>
