--- a/02-feb-21/23-02/galery.html
+++ b/02-feb-21/23-02/galery.html
@@ -17,6 +17,15 @@
         </ul>
       </nav>
     </header>
+
+    <div class="grid">
+      <img src="https://picsum.photos/900?grayscale" alt="random pic" />
+      <img src="https://picsum.photos/800?grayscale" alt="random pic" />
+      <img src="https://picsum.photos/700?grayscale" alt="random pic" />
+      <img src="https://picsum.photos/600?grayscale" alt="random pic" />
+      <img src="https://picsum.photos/1100?grayscale" alt="random pic" />
+      <img src="https://picsum.photos/1000?grayscale" alt="random pic" />
+    </div>
     <footer>
       <p>❤ Made with Love ❤</p>
       <a href="contact.html">contact me</a>
