--- a/02-feb-21/23-02/index.html
+++ b/02-feb-21/23-02/index.html
@@ -18,7 +18,7 @@
       </nav>
     </header>
     <h1>This is a headline</h1>
-    <p>
+    <p class="einleitend">
       Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe labore
       illo a soluta repudiandae iste inventore, ullam, enim veritatis pariatur
       error voluptates velit corporis debitis consequuntur iusto accusamus et
@@ -39,7 +39,9 @@
             cupiditate incidunt possimus dicta tempora et, ut veniam excepturi
             quaerat?
           </p>
-          <img src="https://picsum.photos/300?grayscale" alt="random pic" />
+          <a href="./readMore.html"
+            ><img src="https://picsum.photos/900?grayscale" alt="random pic"
+          /></a>
           <p>
             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Provident
             vitae vel nam! Tempora nisi eaque modi placeat consectetur, quis
@@ -54,7 +56,7 @@
             expedita, alias id. Non, corrupti? Esse natus minus quo suscipit
             necessitatibus quisquam?
           </p>
-          <button>Read more</button>
+          <button><a href="./readMore.html">Read more</a></button>
         </article>
       </div>
       <div class="article">
@@ -66,7 +68,9 @@
             cupiditate incidunt possimus dicta tempora et, ut veniam excepturi
             quaerat?
           </p>
-          <img src="https://picsum.photos/200?grayscale" alt="random pic" />
+          <a href="./readMore.html"
+            ><img src="https://picsum.photos/800?grayscale" alt="random pic"
+          /></a>
           <p>
             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Provident
             vitae vel nam! Tempora nisi eaque modi placeat consectetur, quis
@@ -81,7 +85,7 @@
             expedita, alias id. Non, corrupti? Esse natus minus quo suscipit
             necessitatibus quisquam?
           </p>
-          <button>Read more</button>
+          <button><a href="./readMore.html">Read more</a></button>
         </article>
       </div>
       <div class="article">
@@ -93,7 +97,9 @@
             cupiditate incidunt possimus dicta tempora et, ut veniam excepturi
             quaerat?
           </p>
-          <img src="https://picsum.photos/400?grayscale" alt="random pic" />
+          <a href="./readMore.html"
+            ><img src="https://picsum.photos/700?grayscale" alt="random pic"
+          /></a>
           <p>
             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Provident
             vitae vel nam! Tempora nisi eaque modi placeat consectetur, quis
@@ -108,7 +114,7 @@
             expedita, alias id. Non, corrupti? Esse natus minus quo suscipit
             necessitatibus quisquam?
           </p>
-          <a href="./readMore.html" class="button">Read more</a>
+          <button><a href="./readMore.html">Read more</a></button>
         </article>
       </div>
     </div>
