--- a/02-feb-21/23-02/readMore.html
+++ b/02-feb-21/23-02/readMore.html
@@ -17,6 +17,43 @@
         </ul>
       </nav>
     </header>
+    <h1>Article</h1>
+    <p class="einleitend">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo quam adipisci
+      sapiente. In accusamus aliquam, sit ipsa sapiente mollitia quod odio animi
+      doloribus facere deleniti corrupti reiciendis, officiis voluptas. Vero
+      dolores libero sit repudiandae. Ipsam, aliquam. Nesciunt repellat incidunt
+      adipisci ullam quaerat porro quasi molestias dicta! Asperiores saepe
+      inventore repudiandae?
+    </p>
+    <div>
+      <img
+        class="art"
+        src="https://picsum.photos/900/300?grayscale"
+        alt="random pic"
+      />
+    </div>
+    <div>
+      <p>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Error numquam
+        provident id unde facilis, placeat laborum corporis optio, deserunt
+        aperiam dolorem velit, incidunt quidem ab vero! Ullam reiciendis error
+        id repellat similique nemo deleniti magni labore earum consequuntur
+        numquam consequatur, iste nisi reprehenderit consectetur temporibus in
+        ea amet molestias, totam possimus. Temporibus consequatur, architecto
+        odit adipisci, esse culpa alias labore vero commodi eaque quod tenetur
+        iure vel fugit debitis. Deleniti rerum, eius numquam expedita
+        perspiciatis autem corrupti et eos non reiciendis, praesentium minus id!
+        Enim maxime harum saepe error amet libero sint quibusdam minima, unde
+        quo qui vel debitis? Voluptas omnis saepe exercitationem quae adipisci.
+        Temporibus, dolores fuga accusantium dicta totam, corporis nobis ad eos
+        laboriosam debitis soluta harum quis aut sint cum eius incidunt
+        dignissimos necessitatibus ex nihil? Minus, labore, alias doloribus
+        laborum iusto aliquam ipsum dolores esse amet hic nam corporis expedita
+        deserunt assumenda aliquid. Laboriosam, asperiores facilis.
+      </p>
+    </div>
+
     <footer>
       <p>❤ Made with Love ❤</p>
       <a href="contact.html">contact me</a>
