--- a/02-feb-21/23-02/index.html
+++ b/02-feb-21/23-02/index.html
@@ -29,7 +29,7 @@
       animi mollitia autem ea, dolore quaerat quibusdam quae exercitationem
       magnam amet veritatis sed. At sed itaque optio ex.
     </p>
-    <div>
+    <div class="something">
       <div class="article">
         <article>
           <h2>Article ONE</h2>
