--- a/02-feb-21/23-02/index.html
+++ b/02-feb-21/23-02/index.html
@@ -121,6 +121,7 @@
     <footer>
       <p>❤ Made with Love ❤</p>
       <a href="contact.html">contact me</a>
+      <a href="https://htmlcheatsheet.com/css/">helpful link</a>
     </footer>
   </body>
 </html>
