--- a/03-mar-21/01-03/index.htm
+++ b/03-mar-21/01-03/index.htm
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pseudo classes and elements</title>
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <div class="menu">
@@ -17,6 +17,8 @@
     </div>
     <div class="form-input">
       <form action="index.js" method="GET">
+        <!-- action = backend file -->
+        <!-- method = how form will send info to backend file (!case sensitive!)-->
         <input
           type="text"
           name="firstName"
