--- a/03-mar-21/01-03/index.htm
+++ b/03-mar-21/01-03/index.htm
@@ -25,7 +25,9 @@
           id="1"
           placeholder="enter your name"
           required
-        /><br />
+        />
+        <!-- id = used as programming number -->
+        <br />
         <input
           type="password"
           name="password"
@@ -34,22 +36,37 @@
         /><br />
         <input type="submit" value="Send" />
         <input type="reset" value="Clear" />
+        <!-- type = "button" – can design as u wish -->
+        <!-- type = "submit"/"reset"/etc – preprogrammed -->
       </form>
     </div>
 
     <div class="img-text">
       <div class="text">There is a cool cat, next to the tree.</div>
-      <img class="tree" src="./img/tree.jpg" alt="Tree and something" />
+      <img
+        class="tree"
+        src="https://picsum.photos/id/101/400/300"
+        alt="Tree and something"
+      />
     </div>
     <div class="last-text">
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit earum in
         magnam corrupti! Tenetur tempora accusamus veniam illo debitis est.
-        <a href="https://www.google.com" target="_blank">Look for it </a>
+        <a
+          href="https://developer.mozilla.org/de/docs/Web/CSS/Pseudo-classes"
+          target="_blank"
+          >Pseudo classes
+        </a>
+        <a
+          href="https://developer.mozilla.org/de/docs/Web/CSS/Pseudo-elements"
+          target="_blank"
+          >Pseudo elements
+        </a>
       </p>
     </div>
     <div class="last-img">
-      <img src="./img/tree.jpg" alt="tree img" />
+      <img src="https://picsum.photos/id/1003/400" alt="tree img" />
     </div>
   </body>
 </html>
