--- a/03-mar-21/01-03/index.htm
+++ b/03-mar-21/01-03/index.htm
@@ -9,8 +9,13 @@
   </head>
   <body>
     <div class="menu">
-      Home <br />
-      Call me
+      <nav>
+        <ul>
+          <li><a href="home">Home</a></li>
+          <li><a href="about">About</a></li>
+          <li><a href="contact"></a>Contact</li>
+        </ul>
+      </nav>
     </div>
     <div class="main-text">
       <h1>Hi, welcome to my page</h1>
