--- a/03-mar-21/01-03/index.htm
+++ b/03-mar-21/01-03/index.htm
@@ -12,8 +12,8 @@
       <nav>
         <ul>
           <li><a href="home">Home</a></li>
-          <li><a href="about">About</a></li>
-          <li><a href="contact"></a>Contact</li>
+          <li><a href="./chessboard/index.html">About</a></li>
+          <li><a href="./chessboard/index.html"></a>chessboard</li>
         </ul>
       </nav>
     </div>
