--- a/03-mar-21/02-03/index.html
+++ b/03-mar-21/02-03/index.html
@@ -17,7 +17,10 @@
         , voluptates blanditiis velit quos numquam dolores, tempora error
         deleniti non soluta cupiditate laborum corrupti eveniet id cumque!
       </p>
-      <img src="https://picsum.photos/800/500" alt="random pic" />
+      <img
+        src="https://picsum.photos/id/1054/800/500?grayscale"
+        alt="random pic"
+      />
       <p class="after">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit harum
         repellat perferendis, voluptates error fugit consequuntur maxime laborum
@@ -35,10 +38,7 @@
         tempora! Eveniet repellat id ducimus velit iste eaque laudantium nihil,
         aliquam, voluptate quisquam eius facere asperiores praesentium ratione?
         Doloremque, libero est dolore tempore beatae esse facilis vel cumque
-        magni excepturi expedita. Commodi doloremque neque perferendis, ab,
-        dolore esse quae voluptatum debitis, tenetur veniam qui a veritatis
-        pariatur consequuntur cum eaque laudantium error hic voluptates culpa
-        soluta nesciunt corrupti? Ipsum sed provident eos ad aspernatur.
+        magni excepturi expedita.
       </p>
     </div>
   </body>
