--- a/03-mar-21/03-03/index.html
+++ b/03-mar-21/03-03/index.html
@@ -7,5 +7,27 @@
     <title>Fancy form</title>
     <link rel="stylesheet" href="./style.css" />
   </head>
-  <body></body>
+  <body>
+    <form action="index.js" method="GET">
+      <fieldset>
+        <legend>Your Personal Info</legend>
+        <input type="text" name="name" placeholder="Tell me your name" id="1" />
+        <input type="text" name="lastname " id="2" />
+        <input type="datetime" name="b-day" id="3" />
+      </fieldset>
+      <fieldset>
+        <legend>Your Favorite Things</legend>
+        <input type="color" name="color" id="4" />
+        <input type="time" name="time" id="5" />
+      </fieldset>
+      <section class="toggle">
+        <label class="toggle-label">Want more info?</label>
+        <label class="switch">
+          <input type="checkbox" name="moreInfo" />
+          <span class="slider"></span
+        ></label>
+      </section>
+      <input type="submit" value="Send" />
+    </form>
+  </body>
 </html>
