--- a/03-mar-21/23-03/index.html
+++ b/03-mar-21/23-03/index.html
@@ -6,6 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="./css/normalize.css" />
     <link rel="stylesheet" href="./css/style.css" />
+    <!-- if more css files for different devices:
+    
+       <link rel="stylesheet" href="style.css" media="(max-width:500px"> -->
+
     <title>The Water App</title>
   </head>
   <body>
