--- a/04-apr-21/12-04/index.html
+++ b/04-apr-21/12-04/index.html
@@ -83,7 +83,7 @@
     </nav>
   </header>
   <body>
-    <div class="container-fluid col-7">
+    <div class="container-fluid col-7 mt-5 pt-5">
       Lorem ipsum dolor sit, amet consectetur adipisicing elit. Optio eligendi
       ipsa voluptas. Eveniet non dolore nostrum eaque iure architecto esse neque
       alias sed, corporis consequatur inventore voluptatibus est repellat
@@ -112,7 +112,7 @@
           </svg>
           <div class="text-center m-3">
             <img
-              src="https://picsum.photos/id/1025/200/300"
+              src="https://picsum.photos/id/1062/200/300"
               class="rounded"
               alt="..."
             />
@@ -133,8 +133,8 @@
           </svg>
           <div class="text-center m-3">
             <img
-              src="https://picsum.photos/id/1025/200/300"
-              class="rounded"
+              src="../12-04/img/matthew-henry-n5vuEc86Zg8-unsplash.jpg"
+              class="rounded w-100"
               alt="..."
             />
           </div>
@@ -162,13 +162,62 @@
         </div>
       </div>
     </div>
-    <!-- Bambi -->
-    <div class="text-center">
-      <img
-        src="https://picsum.photos/id/1003/500"
-        class="img-fluid"
-        alt="random pic"
-      />
+    <!-- Carousel -->
+    <div
+      id="carouselExampleIndicators"
+      class="carousel slide"
+      data-ride="carousel"
+    >
+      <ol class="carousel-indicators">
+        <li
+          data-target="#carouselExampleIndicators"
+          data-slide-to="0"
+          class="active"
+        ></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+      </ol>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img
+            class="d-block w-100"
+            src="https://picsum.photos/id/200/800/300"
+            alt="First slide"
+          />
+        </div>
+        <div class="carousel-item">
+          <img
+            class="d-block w-100"
+            src="https://picsum.photos/id/1020/600/300"
+            alt="Second slide"
+          />
+        </div>
+        <div class="carousel-item">
+          <img
+            class="d-block w-100"
+            src="https://picsum.photos/id/200/600/300"
+            alt="Third slide"
+          />
+        </div>
+      </div>
+      <a
+        class="carousel-control-prev"
+        href="#carouselExampleIndicators"
+        role="button"
+        data-slide="prev"
+      >
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a
+        class="carousel-control-next"
+        href="#carouselExampleIndicators"
+        role="button"
+        data-slide="next"
+      >
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
     </div>
     <!-- Padding stuff -->
     <div class="container overflow-hidden">
