--- a/04-apr-21/19-04/src/index.html
+++ b/04-apr-21/19-04/src/index.html
@@ -14,6 +14,14 @@
       <div></div>
       <div></div>
     </div>
-    <div class="list"></div>
+    <div class="list">
+      <div class="circle one"><div class="square"></div></div>
+      <div class="circle two"><div class="square"></div></div>
+      <div class="circle three"><div class="square"></div></div>
+      <div class="circle four"><div class="square"></div></div>
+      <div class="circle five"><div class="square"></div></div>
+      <div class="circle six"><div class="square"></div></div>
+      <div class="circle seven"><div class="square"></div></div>
+    </div>
   </body>
 </html>
