--- a/04-apr-21/19-04/src/index.html
+++ b/04-apr-21/19-04/src/index.html
@@ -14,6 +14,24 @@
       <div></div>
       <div></div>
     </div>
+    <div class="triangle">
+      <p class="text">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum qui aperiam
+        repellendus commodi veniam! Ratione, quam quod perferendis reprehenderit
+        eius ipsa, saepe, eligendi facere iste obcaecati voluptatem rem atque
+        libero!
+      </p>
+      <p class="text">
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati
+        aliquid officiis nostrum odit adipisci totam exercitationem maxime
+        reiciendis laudantium! In iusto eum alias consequuntur ratione placeat
+        perferendis magni incidunt vel temporibus esse quasi obcaecati, expedita
+        assumenda accusamus, quo nesciunt. Corporis?
+      </p>
+      <p class="text">
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Unde, nemo.
+      </p>
+    </div>
     <div class="list">
       <div class="circle one"><div class="square"></div></div>
       <div class="circle two"><div class="square"></div></div>
