--- a/04-apr-21/19-04/src/index.html
+++ b/04-apr-21/19-04/src/index.html
@@ -8,30 +8,27 @@
   </head>
   <body>
     <div class="header"></div>
-    <div class="box"></div>
+    <div class="box one"></div>
+    <div class="box two"></div>
+    <div class="box three"></div>
+    <div class="box four"></div>
     <div class="container">
       <div></div>
       <div></div>
       <div></div>
     </div>
-    <div class="triangle">
-      <p class="text">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum qui aperiam
-        repellendus commodi veniam! Ratione, quam quod perferendis reprehenderit
-        eius ipsa, saepe, eligendi facere iste obcaecati voluptatem rem atque
-        libero!
-      </p>
-      <p class="text">
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati
-        aliquid officiis nostrum odit adipisci totam exercitationem maxime
-        reiciendis laudantium! In iusto eum alias consequuntur ratione placeat
-        perferendis magni incidunt vel temporibus esse quasi obcaecati, expedita
-        assumenda accusamus, quo nesciunt. Corporis?
-      </p>
-      <p class="text">
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Unde, nemo.
-      </p>
+    <div class="upDown">
+      <div class="triangle">
+        <p class="text">
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati
+          aliquid officiis nostrum odit adipisci totam exercitationem maxime
+          reiciendis laudantium! In iusto eum alias consequuntur ratione placeat
+          perferendis magni incidunt vel temporibus esse quasi obcaecati,
+          expedita assumenda accusamus, quo nesciunt. Corporis?
+        </p>
+      </div>
     </div>
+
     <div class="list">
       <div class="circle one"><div class="square"></div></div>
       <div class="circle two"><div class="square"></div></div>
@@ -40,6 +37,11 @@
       <div class="circle five"><div class="square"></div></div>
       <div class="circle six"><div class="square"></div></div>
       <div class="circle seven"><div class="square"></div></div>
+    </div>
+    <div class="carousel">
+      <div class="color one"></div>
+      <div class="color two"></div>
+      <div class="color three"></div>
     </div>
   </body>
 </html>
