--- a/04-apr-21/21-04/src/index.html
+++ b/04-apr-21/21-04/src/index.html
@@ -37,6 +37,12 @@
     </select>
     <button onclick="multiply()">Multiply</button>
     <div class="result"></div>
+
+    <label for="sqrt">SquareRoot from</label>
+    <input type="text" name="sqrt" id="sqrt" />
+
+    <button onclick="gimmeSqrt()">Gimme Squareroot!</button>
+
     <script>
       console.log("Cool");
     </script>
