--- a/04-apr-21/26-04/index.html
+++ b/04-apr-21/26-04/index.html
@@ -3,9 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>D O M</title>
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
+    <button onclick="create()">create</button>
+
+    <!-- <form> -->
+    <input type="text" name="userText" id="userData" />
+    <button onclick="add2List()">Add</button>
+    <!-- </form> -->
+    <ul class="result"></ul>
     <script src="./index.js"></script>
   </body>
 </html>
