I am a freaking genius

--- a/05-may-21/04-05/index.html
+++ b/05-may-21/04-05/index.html
@@ -16,7 +16,7 @@
       <select id="color" name="color">
         <option selected="">Choose wisely</option>
         <option value="tomato">Tomato</option>
-        <option value="lace">Lace</option>
+        <option value="papayawhip">Papayawhip</option>
         <option value="olive">Olive</option>
         <option value="teal">Teal</option>
       </select>
