I am a freaking genius

--- a/05-may-21/04-05/index.html
+++ b/05-may-21/04-05/index.html
@@ -22,15 +22,16 @@
       </select>
       <button class="changeColor">Change Color</button>
       <hr />
+      <label for="userData">What's your favorite color?</label>
       <input type="text" name="userName" id="userData" />
-      <button class="changeColor">Change Color</button>
+      <button class="changeColor">Tell me!</button>
       <hr />
       <input type="submit" value="Send" />
       <input type="reset" value="Clear" />
     </form>
     <div class="done">
       <span class="close" onclick="hide()">X</span>
-      <div>Done</div>
+      <div>W O W</div>
       <span class="msg"></span>
     </div>
 
